--- a/package.json
+++ b/package.json
@@ -1,11 +1,14 @@
 {
-  "name": "server",
+  "name": "clickera",
   "version": "1.0.0",
-  "description": "",
+  "description": "A replica of Instagram",
   "main": "index.js",
   "scripts": {
     "start": "node app.js",
     "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix client && npm run build --prefix client"
+  },
+  "engines": {
+    "node": "14.17.6"
   },
   "keywords": [],
   "author": "",
