--- a/api/package.json
+++ b/api/package.json
@@ -15,9 +15,11 @@
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^5.0.1",
+    "dotenv": "^16.4.5",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.12.11",
-    "nodemailer": "^6.6.2"
+    "nodemailer": "^6.6.2",
+    "nodemon": "^3.1.7"
   }
 }
