--- a/api/package.json
+++ b/api/package.json
@@ -4,8 +4,7 @@
   "description": "A replica of Instagram",
   "main": "index.js",
   "scripts": {
-    "start": "node app.js",
-    "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix client && npm run build --prefix client"
+    "start": "node index.js"
   },
   "engines": {
     "node": "14.17.6"
